# FIT-OCR

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  LICENSE  README.md  THIRD_PARTY  docker-compose.yml  pyproject.toml
OCR_server/: .env.example  .gitignore  README.md  pyproject.toml
OCR_server/src/ocr_server/: cli.py  ocr.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/cosine/fitocr/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cosine/fitocr/: FitOcrApplication.kt  MainActivity.kt
android/app/src/main/java/com/cosine/fitocr/data/api/: FitOcrApi.kt  Models.kt
android/app/src/main/java/com/cosine/fitocr/data/network/: DynamicBaseUrlInterceptor.kt
android/app/src/main/java/com/cosine/fitocr/data/preferences/: SettingsPreferences.kt
android/app/src/main/java/com/cosine/fitocr/data/repository/: OcrRepository.kt
android/app/src/main/java/com/cosine/fitocr/di/: NetworkModule.kt
android/app/src/main/java/com/cosine/fitocr/domain/model/: OcrResult.kt
android/app/src/main/java/com/cosine/fitocr/ui/component/: EngineSelector.kt  ImagePicker.kt  LatexRenderer.kt  OcrResultView.kt  SettingsDialog.kt
android/app/src/main/java/com/cosine/fitocr/ui/navigation/: AppNavigation.kt
android/app/src/main/java/com/cosine/fitocr/ui/screen/: OcrScreen.kt
android/app/src/main/java/com/cosine/fitocr/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/cosine/fitocr/ui/viewmodel/: OcrViewModel.kt  SettingsViewModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/cosine/fitocr/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
nginx/: nginx.conf
prototype/: README.md  check_cuda.py  dump_models.py  smoke_test.py  web_proto.py
prototype/engines/: __init__.py  cloud.py  local.py
prototype/scripts/: check_optimum.py  check_ort.py  check_versions.py  fetch_models.sh  run_ocr.py  test_api.py  test_health.py
scripts/: fetch_models.sh  setup_dev.sh  verify_e2e.py  verify_imports.py
server/: __init__.py  __main__.py
server/api/: __init__.py  app.py
server/api/middleware/: auth.py
server/api/routes/: admin.py
server/api/static/: index.html
server/api/static/admin/: index.html
server/api/static/admin/assets/: index-DJHkrCEn.js  index-DuZOdHSc.js  index-o-wmeadU.css
server/cli/: __init__.py  admin_cli.py  cli.py
server/core/: __init__.py  exceptions.py  interfaces.py
server/engines/: cloud.py  fallback.py  local.py
server/infrastructure/: config.py  database.py  logging.py  models.py
src/fit_ocr/: __main__.py
src/fit_ocr/core/: models.py
src/fit_ocr/engines/: __init__.py  cloud.py  fallback.py  local.py
src/fit_ocr/infrastructure/: __init__.py
src/fit_ocr/web/: app.py
tests/: conftest.py  test_engines.py  test_fallback.py
web-admin/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web-admin/src/api/: index.ts
web-admin/src/router/: index.ts
web-admin/src/views/: Dashboard.vue  Images.vue  Layout.vue  Login.vue  Records.vue  Stats.vue
