[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fit-ocr"
version = "0.1.0"
description = "Photo-to-LaTeX OCR with local/cloud fallback"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cosine16" },
]
keywords = ["ocr", "latex", "pix2text", "glm-4v", "formula"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pix2text>=1.1.3,<1.2",
    # transformers/tokenizers/optimum/onnxruntime pinned for pix2text 1.1.x compatibility.
    # transformers 5.x removes `is_tf_available` (breaks optimum 1.16);
    # tokenizers <0.20 cannot read newer tokenizer.json formats shipped with pix2text models.
    "transformers>=4.46,<4.50",
    "tokenizers>=0.20,<0.21",
    "optimum[onnxruntime]==1.16.2",
    "onnxruntime==1.20.1",
    "torch>=2.4,<2.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
cloud = [
    "zhipuai>=2.1.0",
    # zhipuai 2.1.x has missing transitive deps in some wheels; pin them explicitly.
    "cachetools>=4.2.2",
    "pyjwt>=2.8.0,<2.9.0",
    "sniffio>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
fit-ocr = "fit_ocr.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fit_ocr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
