[project]
name = "ocr-server"
version = "0.1.0"
description = "Command-line OCR tool powered by GLM-4V (Zhipu AI)"
readme = "README.md"
authors = [
    { name = "nanocore", email = "2395058425@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sniffio>=1.3.1",
    "zhipuai>=2.1.5.20250825",
]

[project.scripts]
ocr-server = "ocr_server.cli:cli"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
